在做一些UX優化

--- a/register.html
+++ b/register.html
@@ -135,17 +135,20 @@
         </div>
 
         <div class="footer_box_address">
-            <img src="/圖片素材/logo_l@svg.svg" alt="logo_l@2x">
+            <img src="圖片素材/logo_l@svg.svg" alt="logo_l@2x">
 
             <div class="footer_box_address_icon">
-                <a href="#"><img src="/圖片素材/google-plus.png" alt="google-plus"></a>
-                <a href="#"><img src="/圖片素材/twitter.png" alt="twitter"></a>
-                <a href="#"><img src="/圖片素材/facebook.png" alt="facebook"></a>
+                <a href="#"><img src="圖片素材/google-plus.png" alt="google-plus"></a>
+                <a href="#"><img src="圖片素材/twitter.png" alt="twitter"></a>
+                <a href="#"><img src="圖片素材/facebook.png" alt="facebook"></a>
             </div>
             
         </div>
 
     </footer>
+
+    <div class="goBack"><a href="#">回首頁</a ></div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
