再次再次更改UX及增加icon

--- a/register.html
+++ b/register.html
@@ -22,6 +22,7 @@
     <meta property="og:url" content="Google+上的網址" />
     <meta property="og:image" content="Google+的圖片" />
 
+    <link rel="shortcut icon" href="圖片素材/burger.png" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="login&register.css">
     <link rel="stylesheet" href="RWD.css">
